
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SIZE ;
 int SUCCESS ;
 int attemptNumber ;
 int controlSock ;
 int filename ;
 int getpid () ;
 int my_recv (int ) ;
 int my_send (int ,char*,int ) ;
 int snprintf (int ,int ,char*,int,int) ;
 int status_bar (char*) ;
 scalar_t__ strcmp (int ,char*) ;
 int uploadPath ;

int set_path_and_filename()
{
status_bar("Setting filename");
if(strcmp(uploadPath,"")) {
my_send(controlSock, "CWD %s\r\n",uploadPath);
my_recv(controlSock);
}
snprintf(filename,SIZE,"proft_put_down-%d-%d.txt",getpid(),attemptNumber);
return SUCCESS;
}
