; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_110.c_set_path_and_filename.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_110.c_set_path_and_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"Setting filename\00", align 1
@uploadPath = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@controlSock = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [9 x i8] c"CWD %s\0D\0A\00", align 1
@filename = common dso_local global i32 0, align 4
@SIZE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [25 x i8] c"proft_put_down-%d-%d.txt\00", align 1
@attemptNumber = common dso_local global i32 0, align 4
@SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @set_path_and_filename() #0 {
  %1 = call i32 @status_bar(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %2 = load i32, i32* @uploadPath, align 4
  %3 = call i64 @strcmp(i32 %2, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0))
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %11

5:                                                ; preds = %0
  %6 = load i32, i32* @controlSock, align 4
  %7 = load i32, i32* @uploadPath, align 4
  %8 = call i32 @my_send(i32 %6, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 %7)
  %9 = load i32, i32* @controlSock, align 4
  %10 = call i32 @my_recv(i32 %9)
  br label %11

11:                                               ; preds = %5, %0
  %12 = load i32, i32* @filename, align 4
  %13 = load i32, i32* @SIZE, align 4
  %14 = call i32 (...) @getpid()
  %15 = load i32, i32* @attemptNumber, align 4
  %16 = call i32 @snprintf(i32 %12, i32 %13, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.3, i64 0, i64 0), i32 %14, i32 %15)
  %17 = load i32, i32* @SUCCESS, align 4
  ret i32 %17
}

declare dso_local i32 @status_bar(i8*) #1

declare dso_local i64 @strcmp(i32, i8*) #1

declare dso_local i32 @my_send(i32, i8*, i32) #1

declare dso_local i32 @my_recv(i32) #1

declare dso_local i32 @snprintf(i32, i32, i8*, i32, i32) #1

declare dso_local i32 @getpid(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
